Miscellaneous findbugs fixes.